--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                 <a href="#"></a>
                 <a href="#"></a>
             </div>
-            <p>&copy; 2025 - Built with code and cybersecurity passion</p>
+            <p>&copy; 2025</p>
         </div>
     </footer>
 
