--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css" type="text/css" media="screen" />
     <script src="script.js" defer></script>
-    <title>Security Engineer Portfolio</title>
+    <title>Malo Sanson</title>
 
 </head>
 <body>
     <!-- Navigation -->
     <nav>
         <div class="container nav-container">
-            <div class="logo">portfolio</div>
+            <div class="logo">Malo_Sanson</div>
             <button class="hamburger" id="hamburger">☰</button>
             <ul class="nav-links" id="navLinks">
                 <li><a href="#hero">accueil</a></li>
@@ -34,7 +34,7 @@
                         <div class="dot dot-yellow"></div>
                         <div class="dot dot-green"></div>
                     </div>
-                    <div class="terminal-title">malo@sanson:~/portfolio</div>
+                    <div class="terminal-title">malo@sanson:~$</div>
                 </div>
                 <div class="terminal-body">
                     <div class="command-line">whoami</div>
@@ -172,7 +172,7 @@
         <div class="contact-container">
             <div class="contact-header fade-in">
                 <h2>./contact</h2>
-                <p>Interested in connecting? Reach out through any of these channels:</p>
+
             </div>
 
             <div class="contact-methods">
