--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                     <div class="timeline-content">
                         <span class="timeline-date">2022 - Aujourd'hui</span>
                         <h3>UTBM, France</h3>
-                        <p>Ecole d'ingénieur, spécialité réseau et télécommunications</p>
+                        <p>Ecole d'ingénieur, spécialité réseau et sécurité</p>
                     </div>
                 </div>
                 
